{
  "version": 4,
  "terraform_version": "1.1.8",
  "serial": 3,
  "lineage": "c0b606bf-ac9c-08aa-a942-542389ad51ef",
  "resources": [
    {
      "module": "module.main_elastic_ip[0]",
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03d905a3b50450b8b",
            "association_id": "eipassoc-08a010037af255bc2",
            "domain": "vpc",
            "id": "eipalloc-03d905a3b50450b8b",
            "network_border_group": "us-east-1",
            "network_interface": "eni-062a046d0f022cf0f",
            "private_dns": "ip-10-0-0-209.ec2.internal",
            "private_ip": "10.0.0.209",
            "public_dns": "ec2-54-83-190-123.compute-1.amazonaws.com",
            "public_ip": "54.83.190.123",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "0-main-eip"
            },
            "tags_all": {
              "Name": "0-main-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.main_elastic_ip[1]",
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09819eede358ebbbd",
            "association_id": "eipassoc-0f2cee92a01204301",
            "domain": "vpc",
            "id": "eipalloc-09819eede358ebbbd",
            "network_border_group": "us-east-1",
            "network_interface": "eni-046e495c51535abbf",
            "private_dns": "ip-10-0-1-9.ec2.internal",
            "private_ip": "10.0.1.9",
            "public_dns": "ec2-107-21-45-146.compute-1.amazonaws.com",
            "public_ip": "107.21.45.146",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "1-main-eip"
            },
            "tags_all": {
              "Name": "1-main-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.main_nat_gateway[0]",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03d905a3b50450b8b",
            "connectivity_type": "public",
            "id": "nat-0771e35e5f1caa693",
            "network_interface_id": "eni-062a046d0f022cf0f",
            "private_ip": "10.0.0.209",
            "public_ip": "54.83.190.123",
            "subnet_id": "subnet-021b387c11c90bdde",
            "tags": {
              "Name": "0-main-nat-gateway"
            },
            "tags_all": {
              "Name": "0-main-nat-gateway"
            }
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "subnet_id"
              }
            ]
          ],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.main_elastic_ip.aws_eip.elastic-ip",
            "module.main_public_subnet.aws_subnet.main_subnet",
            "module.my-main-vpc.aws_vpc.my-main-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.main_nat_gateway[1]",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09819eede358ebbbd",
            "connectivity_type": "public",
            "id": "nat-053c069dd0d87447c",
            "network_interface_id": "eni-046e495c51535abbf",
            "private_ip": "10.0.1.9",
            "public_ip": "107.21.45.146",
            "subnet_id": "subnet-07572a9ce6405e350",
            "tags": {
              "Name": "1-main-nat-gateway"
            },
            "tags_all": {
              "Name": "1-main-nat-gateway"
            }
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "subnet_id"
              }
            ]
          ],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.main_elastic_ip.aws_eip.elastic-ip",
            "module.main_public_subnet.aws_subnet.main_subnet",
            "module.my-main-vpc.aws_vpc.my-main-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.main_private_route_table[0]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:003729975368:route-table/rtb-046fa9ab6080c8304",
            "id": "rtb-046fa9ab6080c8304",
            "owner_id": "003729975368",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0771e35e5f1caa693",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "0-main-private-routetable"
            },
            "tags_all": {
              "Name": "0-main-private-routetable"
            },
            "timeouts": null,
            "vpc_id": "vpc-0beefe9e4722d851e"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "vpc_id"
              }
            ]
          ],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.main_elastic_ip.aws_eip.elastic-ip",
            "module.main_nat_gateway.aws_nat_gateway.nat_gateway",
            "module.main_public_subnet.aws_subnet.main_subnet",
            "module.my-main-vpc.aws_vpc.my-main-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.main_private_route_table[1]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:003729975368:route-table/rtb-0d81a7cc299aa2961",
            "id": "rtb-0d81a7cc299aa2961",
            "owner_id": "003729975368",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-053c069dd0d87447c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "1-main-private-routetable"
            },
            "tags_all": {
              "Name": "1-main-private-routetable"
            },
            "timeouts": null,
            "vpc_id": "vpc-0beefe9e4722d851e"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "vpc_id"
              }
            ]
          ],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.main_elastic_ip.aws_eip.elastic-ip",
            "module.main_nat_gateway.aws_nat_gateway.nat_gateway",
            "module.main_public_subnet.aws_subnet.main_subnet",
            "module.my-main-vpc.aws_vpc.my-main-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.main_private_route_table_association[0]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-007ec2808ee1de977",
            "route_table_id": "rtb-046fa9ab6080c8304",
            "subnet_id": "subnet-01d5a76d47b5943bd"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "subnet_id"
              }
            ]
          ],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.main_elastic_ip.aws_eip.elastic-ip",
            "module.main_nat_gateway.aws_nat_gateway.nat_gateway",
            "module.main_private_route_table.aws_route_table.route_table",
            "module.main_private_subnet.aws_subnet.main_subnet",
            "module.main_public_subnet.aws_subnet.main_subnet",
            "module.my-main-vpc.aws_vpc.my-main-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.main_private_route_table_association[1]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a46464229133ec37",
            "route_table_id": "rtb-0d81a7cc299aa2961",
            "subnet_id": "subnet-01974deacc93e3788"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "subnet_id"
              }
            ]
          ],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.main_elastic_ip.aws_eip.elastic-ip",
            "module.main_nat_gateway.aws_nat_gateway.nat_gateway",
            "module.main_private_route_table.aws_route_table.route_table",
            "module.main_private_subnet.aws_subnet.main_subnet",
            "module.main_public_subnet.aws_subnet.main_subnet",
            "module.my-main-vpc.aws_vpc.my-main-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.main_private_subnet[0]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:003729975368:subnet/subnet-01d5a76d47b5943bd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01d5a76d47b5943bd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "003729975368",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "0-main-private-subnet"
            },
            "tags_all": {
              "Name": "0-main-private-subnet"
            },
            "vpc_id": "vpc-0beefe9e4722d851e"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "vpc_id"
              }
            ]
          ],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.my-main-vpc.aws_vpc.my-main-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.main_private_subnet[1]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:003729975368:subnet/subnet-01974deacc93e3788",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01974deacc93e3788",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "003729975368",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "1-main-private-subnet"
            },
            "tags_all": {
              "Name": "1-main-private-subnet"
            },
            "vpc_id": "vpc-0beefe9e4722d851e"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "vpc_id"
              }
            ]
          ],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.my-main-vpc.aws_vpc.my-main-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.main_public_route_table",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:003729975368:route-table/rtb-0ffceccee0a5733d8",
            "id": "rtb-0ffceccee0a5733d8",
            "owner_id": "003729975368",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09e7568596c1ced7f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main-public-routetable"
            },
            "tags_all": {
              "Name": "main-public-routetable"
            },
            "timeouts": null,
            "vpc_id": "vpc-0beefe9e4722d851e"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "vpc_id"
              }
            ]
          ],
          "dependencies": [
            "module.my-main-vpc.aws_vpc.my-main-vpc",
            "module.my_internet_gateway.aws_internet_gateway.internet_gateway"
          ]
        }
      ]
    },
    {
      "module": "module.main_public_route_table_association[0]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-073c634df8a37d0a4",
            "route_table_id": "rtb-0ffceccee0a5733d8",
            "subnet_id": "subnet-021b387c11c90bdde"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "subnet_id"
              }
            ]
          ],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.main_public_route_table.aws_route_table.route_table",
            "module.main_public_subnet.aws_subnet.main_subnet",
            "module.my-main-vpc.aws_vpc.my-main-vpc",
            "module.my_internet_gateway.aws_internet_gateway.internet_gateway"
          ]
        }
      ]
    },
    {
      "module": "module.main_public_route_table_association[1]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ca5151fc46d2a4a5",
            "route_table_id": "rtb-0ffceccee0a5733d8",
            "subnet_id": "subnet-07572a9ce6405e350"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "subnet_id"
              }
            ]
          ],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.main_public_route_table.aws_route_table.route_table",
            "module.main_public_subnet.aws_subnet.main_subnet",
            "module.my-main-vpc.aws_vpc.my-main-vpc",
            "module.my_internet_gateway.aws_internet_gateway.internet_gateway"
          ]
        }
      ]
    },
    {
      "module": "module.main_public_subnet[0]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:003729975368:subnet/subnet-021b387c11c90bdde",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-021b387c11c90bdde",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "003729975368",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "0-main-public-subnet"
            },
            "tags_all": {
              "Name": "0-main-public-subnet"
            },
            "vpc_id": "vpc-0beefe9e4722d851e"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "vpc_id"
              }
            ]
          ],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.my-main-vpc.aws_vpc.my-main-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.main_public_subnet[1]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:003729975368:subnet/subnet-07572a9ce6405e350",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07572a9ce6405e350",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "003729975368",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "1-main-public-subnet"
            },
            "tags_all": {
              "Name": "1-main-public-subnet"
            },
            "vpc_id": "vpc-0beefe9e4722d851e"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "vpc_id"
              }
            ]
          ],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.my-main-vpc.aws_vpc.my-main-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.my-main-vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my-main-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:003729975368:vpc/vpc-0beefe9e4722d851e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-039ab598effcbac17",
            "default_route_table_id": "rtb-0128f448f9be777ce",
            "default_security_group_id": "sg-066b9dd9fdd207b80",
            "dhcp_options_id": "dopt-042d5efc6a18ed39b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0beefe9e4722d851e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0128f448f9be777ce",
            "owner_id": "003729975368",
            "tags": {
              "Name": "main-vpc"
            },
            "tags_all": {
              "Name": "main-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.my_internet_gateway",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:003729975368:internet-gateway/igw-09e7568596c1ced7f",
            "id": "igw-09e7568596c1ced7f",
            "owner_id": "003729975368",
            "tags": {
              "Name": "main-ig"
            },
            "tags_all": {
              "Name": "main-ig"
            },
            "vpc_id": "vpc-0beefe9e4722d851e"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "vpc_id"
              }
            ]
          ],
          "dependencies": [
            "module.my-main-vpc.aws_vpc.my-main-vpc"
          ]
        }
      ]
    }
  ]
}